scrollbar's bugs fixed

--- a/styles/style.css
+++ b/styles/style.css
@@ -1015,7 +1015,7 @@ iframe,
 
   ::-webkit-scrollbar-track {
     box-shadow: 0 3px 5px rgba(57, 63, 72, 0.3);
-    border-left: 1px solid #5f5d5d;
+    border-left: 1px solid #101015;
   }
 
   .footer {
